# binden

./: .gitignore  README.md  TODO.md  build.sh  test.sh  uncrustify.cfg
code/: CMakeLists.txt  Makefile  ascmat.c  image.c  med.c  mktpl.c  morph.py  patches.c  pnm.h  templates.h  types.h
code/apps/: CMakeLists.txt  bin_dude.c  bin_epll.c  bin_nlm.c  bin_nlm_1.c  bin_nlm_2.c  bin_nlm_3.c  bin_nlm_4.c  bin_nlm_tree.c  classic_nlm.c  config.c  config.h  median.c  nlm.c  nlm_fullbin_tree_bayes.c  nlm_fullbin_windowed_avg.c  nlm_fullbin_windowed_bayes.c  nlm_options.c  nlm_options.h  original_nlm.c  quorum_den.c  semibin_nlm.c
code/lib/: ascmat.c  ascmat.h  bitfun.c  bitfun.h  contexts.h  denoiser.c  denoiser.h  image.c  image.h  logging.c  logging.h  patch_mapper.c  patch_mapper.h  pnm.c  (+9 more)
contrib/: get_contrib.sh
data/: get_images.sh  get_luisa.sh  get_luisa_alot.sh  luisa_noisy.list  test_s20.pgm
docs/: TODO  cuentas.tex
results/: luisa.stats.7z
scripts/: comparar.sh  comparar4.sh  demo_bsc.sh  gather_luisa_n8star.sh  run_67.sh  run_sim.sh  summary_sim.sh  test.sh  test_real.sh  test_sim.sh
showoff/: README.md  crop.sh  index.html  script.js
templates/: estrella.asc  template4.asc  template_1.asc  template_multi_3.asc  template_multi_4.asc  template_multiscale_1.asc  template_multiscale_2.asc
templates.old/: template0.asc  template_14.asc  template_2.asc  template_einstein.asc  template_multi_1.asc  template_multi_2.asc
tpl/: ball2.tpl  ball3.tpl  ball4.tpl  full2.tpl  full3.tpl  full4.tpl  mini.tpl  n4.tpl  n8.tpl  n8star.tpl  n8star3.tpl  n8star4.tpl
(+25 files in other folders)
